--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.intelimina.test_launcher"
-  android:versionCode="1"
-  android:versionName="1.0">
+  package="com.intelimina.test_launcher">
+  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-  <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
+  <application android:label="@string/app_name" android:icon="@drawable/ic_launcher"
+    android:allowBackup="false" >
     <activity android:name="MainActivity"
               android:label="@string/app_name">
       <intent-filter>
